classlib: removed more HY dependent tests; adjusted tests